--- a/EmulairWEB/wwwroot/css/Shared/site.css
+++ b/EmulairWEB/wwwroot/css/Shared/site.css
@@ -1,6 +1,16 @@
 /* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: auto;
+}
+
 a.navbar-brand {
     white-space: normal;
     text-align: center;
