--- a/EmulairWEB/wwwroot/css/News/Index.css
+++ b/EmulairWEB/wwwroot/css/News/Index.css
@@ -26,7 +26,8 @@ a[data-create]:hover {
 }
 
 .news-image {
-    width: 70vw;
+    width: 20vw;
+    height: auto;
 }
 
 h3.news-title, .news-summary {
